db configuration update

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-DB_HOST=database-projet.cluster-cuwte2vzhgbv.us-east-1.rds.amazonaws.com
+DB_HOST=database-projet.cuwte2vzhgbv.us-east-1.rds.amazonaws.com
 DB_USER=dalel
 DB_PASSWORD=dalelammar
 DB_NAME=database-projet
